# satoricasino

./: .firebaserc  .gitignore  CLAUDE.md  Dockerfile  firebase.json  firestore.rules  pyproject.toml
backend/: achievements.py  auth.py  challenges.py  config.py  cosmetics.py  database.py  main.py  models.py  websocket_manager.py
backend/game/: blackjack.py  chinchiro.py  deck.py
docs/design-notes/: brighter-dark-simplification.md  excitement-effects.md  lamplit-den-redesign.md  responsible-gaming-pass.md  tone-and-manner.md  ui-ux-clarity.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/css/: style.css
frontend/js/: api.js  auth.js  game.js  lobby.js
frontend/public/: ads.txt  robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts  useGameSocket.ts
frontend/src/auth/: Auth.tsx
frontend/src/game/: BetArea.tsx  Card.tsx  DealerArea.tsx  Game.tsx  PlayerBox.tsx  ResultOverlay.tsx  TurnTimer.tsx
frontend/src/games/: GameRouter.tsx
frontend/src/info/: InfoPage.tsx
frontend/src/lobby/: AchievementList.tsx  Challenges.tsx  Leaderboard.tsx  Lobby.tsx  Shop.tsx
frontend/src/shared/: cosmetics.ts
frontend/src/styles/: ads.css  auth.css  base.css  chinchiro.css  components.css  cosmetics.css  game.css  header.css  index.css  info.css  legacy.css  lobby.css  motion.css  overlays.css  theme.css  tokens.css
frontend/src/types/: game.ts
tests/: test_achievements.py  test_ads.py  test_blackjack.py  test_chinchiro.py  test_cosmetics.py  test_daily_bonus.py  test_table_heat.py
(+50 files in other folders)
