[project]
name = "satoricasino"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi>=0.135.1",
    "firebase-admin>=7.2.0",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "websockets>=16.0",
]
